Újra, mostmár valóban, fel lett töltve a főaldal html fájl

--- a/Oldalak/index.html
+++ b/Oldalak/index.html
@@ -1,75 +1,36 @@
-.menusor
-{
-	height: 10%;
-	width: 96%;
-	margin-left: 20px;
-	margin-right: 20px;
-	position: fixed;
-	top: 10;
+<html lang="hu">
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="../Resources/CSS/fooldal.css">
+</head>
+<body>
 
+	<div class="menusor">
+		<table>
+			<tr>
+				<td id="kep"><img src="logo.png" alt="Logo"></td>
+				<td class="menu-gombok"> <button>Főoldal</button></td>
+				<td class="menu-gombok"> <button class="menu-gombok">Saját aukció</button></td>
+				<td class="menu-gombok"> <button class="menu-gombok">Egyenleg feltöltés</button></td>
+				<td class="menu-gombok"> <button class="menu-gombok">Fórum</button></td>
+				<td class="menu-gombok"> <button class="menu-gombok">Profil</button></td>
+				<td class="menu-gombok"> <button class="menu-gombok" onclick="alert('Ez egy aukciós oldal ahol egy kezdő tőkéböl kiindulva kell meggazdagodnod. Különböző tételekre licitálsz és reméled, hogy nem licitálnak túl. A megszerzett tárgyakat felteheted újabb aukciókra és abból szerzed a profitot. Ha minden pénzed elfogyott ne aggódj, naponta egyszer mehetsz dolgozni. Nem minden aukcióra léphetsz be, komolyabb aukciók komolyabb tételeket rejtenek ahova jelvény kell, ezeket a profilodnál tudod megvenni.')">info</button></td>
+			</tr>
+		</table>
+	</div>
+	<div class="menusor-spacer">
+	</div>
+	<div class="aukcios-felulet">
+	<div id="aukcio">
 
-}
+	</div>
+	<div id="chat-box">
+	</div>
 
-.menusor table 
-{
-	background-color: white;
-	border-bottom: 4px solid black;
-	width: 100%;
-}
-
-#kep img
-{
-	width: 40px;
-	margin-right: 100px;
-}
-
-
-.menu_gombok button
-{
-	width: 10em;
-	height: 3em;
-	border-radius: 10px;
-	font-size: 15px;
-	overflow: hidden;
-	float: right;
-	background-color: #FF0AA1;
-	border-style: solid;
-	border-color: transparent;
-	margin-left: -80px;
-
-
-}
-.menusor-spacer 
-{
-	height: 100px;
-}
-.aukcios-felulet
-{
-	height: 70vh;
-	background-color: green;
-	margin-left: 20px;
-	margin-bottom: 30px;
-	display: flex;
-}
-
-
-#aukcio 
-{
-	background-color: red;
-	height: inherit;
-	width: 80%;
-}
-
-#chat-box
-{
-background-color: blue;
-height: inherit;
-width: 20%;
-}
-
-.naplo
-{
-	height: 70vh;
-	background-color: blue;
-	margin-left: 20px;
-}
+	</div>
+		<table>
+		</table>
+	<div class="naplo">
+	</div>
+</body>
+</html>
