Belépés és regisztráció kinézetét lefektettem

--- a/Oldalak/index.html
+++ b/Oldalak/index.html
@@ -31,6 +31,15 @@
 		<table>
 		</table>
 	<div class="naplo">
+		<table id="filters" style="width: 100%">
+			<tr>
+				<td>
+				<button>Filter1</button>
+				<button>Filter2</button>
+				<button>Filter3</button>	
+				</td>
+			</tr>
+		</table>
 	</div>
 </body>
 </html>
