--- a/Oldalak/profil.html
+++ b/Oldalak/profil.html
@@ -20,7 +20,32 @@
 			<button>Fiok torlese</button>
 		</div>
 		<div id="History" class="inline"><span>Histroy</span></div>
-		<div id="Raktar"><span>Raktár</span></div>
+		<div class="Raktar">	
+		<table>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+		</table>
+		</div>
 		
 	</div>
 </body>
