forum legördülő sáv

--- a/Oldalak/forum.html
+++ b/Oldalak/forum.html
@@ -3,8 +3,24 @@
 <head>
 	<title>Fórum</title>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="../Resources/CSS/forum.css">
+	<script src="../Resources/Scriptek/forum.js"></script>
 </head>
 <body>
-	<p>Csa</p>
+	<div class="navbar"></div>
+	<div id="spacer"></div>
+	<div class="Nagydoboz">
+	<div class="chatbox inline">
+	</div>
+	<div class="publish inline" id="publish">
+		<button onclick="legordul()">POSZTOLOK!!!ÁÁÁÁÁÁÁÁÁHÚÚÚÚÚÚÚINTERAKCIÓÓÓÓÓÓ</button>
+		<div id="pTartalom">
+		<textarea type="text" placeholder="ÚRISTEN MEGSZEREZTEM A PIZZAGÖMBÖT!!!"></textarea><br>
+		<input type="file" accept="image/png">
+		<img src="kep.png" alt="a kép amit kiválasztottál"><br>
+		<button>SZÁBMIT</button>
+		</div>
+	</div>
+</dib>
 </body>
 </html>
