--- a/Oldalak/profil.html
+++ b/Oldalak/profil.html
@@ -15,6 +15,7 @@
 			<button>Uj profilkep</button>
 		</div>
 		<div id="adatok" class="inline">
+			<p>CASH: <span id="penz">PÉZ$$$$$$$$$$</span></p>
 			<p>Felhasznalo nev: <span id="fnev">A fiok neve</span></p>
 			<p>Email cim: <span id="email">Aző ímél cím</span></p>
 			<button>Fiok torlese</button>
