Ahol kellett ott relatív méretekre állítottam a dolgokat. elöbb rosszat adtam hozzá lol

--- a/Oldalak/fooldal.html
+++ b/Oldalak/fooldal.html
@@ -21,10 +21,9 @@
 	<div class="menusor-spacer">
 	</div>
 	<div class="aukcios-felulet">
-	<div id="aukcio">
-
+	<div id="aukcio" class="inline">
 	</div>
-	<div id="chat-box">
+	<div id="chat-box" class="inline">
 	</div>
 
 	</div>
